# dare-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  spec.md
src/: ast.rs  dare.lalrpop  gen_ast.rs  lexer.rs  main.rs  prelude.py  python.rs
tests/: alias.dare  alias_spec.json  atomic_struct.dare  atomic_struct_spec.json  generic_alias.dare  generic_alias_spec.json  generic_struct.dare  generic_struct_spec.json  generic_sum.dare  generic_sum_spec.json  json_directives.dare  json_directives_spec.json  nested.dare  nested_spec.json  references.dare  references_spec.json  simple_enum.dare  simple_enum_spec.json  simple_sum.dare  simple_sum_spec.json  typeof.dare  typeof_spec.json
tests/python/: .gitignore  mypy.ini  test.sh  test_python_impl.py  test_python_prelude.py  test_runner.py
